[package]
name = "peaboard"
version = "0.1.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2024"
description = "A private bulletin board on the pea* stack: discovery (peaveil), gossip (peasub), and metadata-private shaping (peashape) in one small CLI."
license = "CC0-1.0 OR MIT"
repository = "https://github.com/ljedrz/peaboard"
homepage = "https://github.com/ljedrz/peaboard"
documentation = "https://docs.rs/peaboard"
readme = "README.md"
categories = ["network-programming", "command-line-utilities"]
keywords = ["p2p", "gossip", "privacy", "discovery", "bulletin-board"]
rust-version = "1.88"

[dependencies]
peaveil = "0.1"
peasub = "0.2"
tokio = { version = "1", features = ["full"] }
chacha20poly1305 = "0.10"

[[bin]]
name = "peaboard"
path = "src/main.rs"
